    - Adjust the build-dependencies
  * debian/control.in: Update nautilus-extension-gnome-terminal description
  * debian/control.in: Bump Standards-Version to 4.5.0 (no further changes)
  * Drop debian/patches/nautilus-x11.patch, the package builds fine without it
  * Drop d/p/Don-t-allow-the-theme-to-set-black-on-black.patch, the default
    theme is now Adwaita not Raleigh anymore

 -- Laurent Bigonville <bigon@debian.org>  Tue, 10 Mar 2020 18:16:25 +0100

gnome-terminal (3.34.2-1) unstable; urgency=medium

  * New upstream translations update

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 12 Oct 2019 06:46:07 -0400

gnome-terminal (3.34.1-1) unstable; urgency=medium

  * New upstream release
  * Bump minimum libvte-2.91-dev to 0.58.1

 -- Jeremy Bicha <jbicha@debian.org>  Thu, 10 Oct 2019 07:00:42 -0400

gnome-terminal (3.34.0-1) unstable; urgency=medium

  * New upstream release
  * control: Bump vte Build-Depends version to 0.58 per configure.ac
  * control, rules: Port to specifying compat level and sequences in
    Build-Depends. Bump to compat 12
  * control, rules, gnome-terminal.install: Standards-Version 4.4.0 & FHS 3.0.
    This means we can stop overriding the libexecdir.

 -- Iain Lane <laney@debian.org>  Thu, 12 Sep 2019 11:30:16 +0100

gnome-terminal (3.33.90-1) experimental; urgency=medium

  * New upstream release
  * control: Bump BD on libvte per upstream

 -- Iain Lane <laney@debian.org>  Wed, 21 Aug 2019 16:35:25 +0100

gnome-terminal (3.32.1-1) experimental; urgency=medium

  * New upstream release
    + headermenu: Add placeholder item for win.set-title
    + help: Fix pref-profiles.page to validate
    + help: Update application icon for 3.32
    + help: Update application screenshot for 3.32; remove localized versions
    + window: Fix tabs menu
    + window: Show last tab's accel in the tab menu
  * Bump vte BD per upstream

 -- Iain Lane <laney@debian.org>  Tue, 09 Apr 2019 13:13:25 +0100
