@@ -9,11 +9,9 @@ Bug-Debian: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=712628
  src/terminal-screen.c | 66 +++++++++++++++++++++++++++++++++++++++++++++++++++
  1 file changed, 66 insertions(+)
 
-diff --git a/src/terminal-screen.c b/src/terminal-screen.c
-index a4da042..7f99718 100644
 --- a/src/terminal-screen.c
 +++ b/src/terminal-screen.c
-@@ -208,6 +208,63 @@ fake_dup3 (int fd, int fd2, int flags)
+@@ -352,6 +352,63 @@ terminal_screen_clear_exec_data (Termina
  
  G_DEFINE_TYPE (TerminalScreen, terminal_screen, VTE_TYPE_TERMINAL)
  
@@ -77,7 +75,7 @@ index a4da042..7f99718 100644
  static void
  free_tag_data (TagData *tagdata)
  {
-@@ -1636,12 +1693,21 @@ terminal_screen_button_press (GtkWidget      *widget,
+@@ -1866,12 +1923,21 @@ terminal_screen_button_press (GtkWidget
  char *
  terminal_screen_get_current_dir (TerminalScreen *screen)
  {
@@ -96,6 +94,6 @@ index a4da042..7f99718 100644
 +    }
 +  }
 +
-   if (screen->priv->initial_working_directory)
-     return g_strdup (screen->priv->initial_working_directory);
- 
+   ExecData *data = screen->priv->exec_data;
+   if (data && data->cwd)
+     return g_strdup (data->cwd);
